--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,3 +12,5 @@ jobs:
       - uses: actions/checkout@v3
       - name: Run tests
         run: fastlane tests
+      - name: Create screenshots
+        run: fastlane screenshots
