Specify ruby version

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,6 +12,9 @@ jobs:
       - uses: actions/checkout@v3
       - name: Setup ruby
         uses: ruby/setup-ruby@v1.138.0
+        with:
+         ruby-version: 3.2.1
+         bundler-cache: true
       - name: Create screenshots
         run: bundle exec fastlane snapshot --verbose
       - name: Run tests
