--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,4 +1,4 @@
-name: Swift Test and Build
+name: Swift Test
 
 on:
   pull_request:
@@ -10,7 +10,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - name: Create screenshots
+      - name: Run UI Tests
         run: fastlane screenshots --verbose
       - name: Run tests
         run: fastlane tests
